--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,10 @@ spring:
 mybatis:
   configuration:
     map-underscore-to-camel-case: true
+    #控制台日志配置  输出sql
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
   mapper-locations: classpath:mappers/*.xml
+
 
 logging:
   pattern:
