--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,10 @@ spring:
     username: root
     password: 1234
     url: jdbc:mysql://192.168.0.103:3306/mall?characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
+  redis:
+    host: 127.0.0.1
+    port: 6379
+
 
 mybatis:
   configuration:
@@ -21,3 +25,4 @@ server:
   servlet:
     session:
       timeout: 120
+
