--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,11 @@ spring:
   redis:
     host: 127.0.0.1
     port: 6379
+  rabbitmq:
+    addresses: 192.168.2.128
+    port: 5672
+    username: guest
+    password: guest
 
 
 mybatis:
